--- a/index.html
+++ b/index.html
@@ -54,20 +54,24 @@
 
                 <div class="filter-group">
                     <label>Age Range</label>
-                    <div id="age-filter" class="range-slider-container">
-                        <!-- D3 Range Slider placeholder -->
+                    <div id="age-filter-group" class="filter-controls">
                         <div class="range-values">
                             <span id="age-min">18</span> - <span id="age-max">64</span>
+                        </div>
+                        <div id="age-filter" class="range-slider-container">
+                            <!-- D3 Range Slider -->
                         </div>
                     </div>
                 </div>
 
                 <div class="filter-group">
                     <label>BMI Range</label>
-                    <div id="bmi-filter" class="range-slider-container">
-                        <!-- D3 Range Slider placeholder -->
+                    <div id="bmi-filter-group" class="filter-controls">
                         <div class="range-values">
                             <span id="bmi-min">15</span> - <span id="bmi-max">54</span>
+                        </div>
+                        <div id="bmi-filter" class="range-slider-container">
+                            <!-- D3 Range Slider -->
                         </div>
                     </div>
                 </div>
